[package]
name = "net_profiler"
description = "A tool for managing different network adapter profiles, designed for ROV connections"
version = "0.5.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 }

[dependencies]
# UI
eframe = { version = "0.28.1", features = ["persistence"] }
egui = "0.28.1"
egui-file-dialog = "0.6.0"
# Utils
network-interface = "2.0.0"
regex = "1.11.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_os = "windows")'.dependencies]
utfx = { version = "0.1.0", optional = true }
registry = { version = "1.3.0", optional = true }
widestring = { version = "1.1.0", optional = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
