[package]
name = "net_profiler"
description = "A tool for managing different network adapter profiles, designed for use in ROV operations"
version = "0.5.0"
repository = "https://github.com/paul-s-cameron/net_profiler"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 }

[dependencies]
eframe = { version = "0.31", features = ["persistence"] }
egui = "0.31"
egui-file-dialog = "0.10.0"
egui-toast = "0.17"
network-interface = "2"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
simple-logging = "2.0.2"
open = "5.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
utfx = { version = "0.1.0", optional = true }
registry = { version = "1", optional = true }
widestring = { version = "1", optional = true }

[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
